# gnome-system-monitor-rh

./: AUTHORS  HACKING  README.md  meson.build  meson_options.txt
data/: gnome-system-monitor-health-sampler.service.in  gnome-system-monitor-kde.desktop.in.in  health.ui  interface.ui  meson.build  org.gnome.SystemMonitor.desktop.in.in  org.gnome.SystemMonitor.metainfo.xml.in.in  org.gnome.SystemMonitor.service.in  org.gnome.gnome-system-monitor.policy.in.in  procproperties.ui
po/: pl.po
src/: application.cpp  application.h  dev-ipc.c  dev-ipc.h  disk.c  gsm-graph.c  gsm.gresource.xml.in  interface.cpp  load-graph.cpp  load-graph.h  meson.build  org.gnome.gnome-system-monitor.gschema.xml.in  procinfo.cpp  procinfo.h  proclist.h  procproperties.cpp  proctable.cpp  proctable.h  settings-keys.h  style.css  util.cpp  util.h
src/health/: gsm-battery.c  gsm-battery.h  gsm-blame.c  gsm-blame.h  gsm-drive-spec.c  gsm-drive-spec.h  gsm-drive.c  gsm-drive.h  gsm-health-db.c  gsm-health-db.h  gsm-history-chart.c  gsm-history-chart.h  gsm-io-accounting-helper.c  gsm-procio.c  gsm-procio.h  gsm-sampler.c  gsm-smart-helper.c  gsm-udisks.c  gsm-udisks.h  health.c  health.h  meson.build
tools/: gsm-dev-ctl
